All completed (?) files, just cannot get the images to load yet

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -14,7 +14,7 @@
 
   <div class="navigation">
 	  <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="LandingPage.html">Lattitude</a>
+        <a class="navbar-brand" href="index.html">Lattitude</a>
         <button class="navbar-toggler border" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,10 +45,10 @@
   <div class="container">
     <section class="row">
       <div class="col-lg-7 col-md-12">
-       <h1 class="Title">Latitude vs</h1>
+       <h1 class="Title">Latitude</h1>
        <hr>
        <img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" class="description">
-       <p>This graph shows the effects of the Lattitude against the Max Temperature</p>
+       <p>Temporary Text Here</p>
       </div>
 
     </div>
@@ -67,7 +67,7 @@
       </div>
       <div class="col-6">
                 <a href="humidity.html">
-          <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity", title="Latitude vs. Humidity" class="imageNav-photo">
+          <img src="C:\Users\astro\OneDrive\Desktop\Projects 1\Web-Design-Challenge\Resources\assets\images\Resources\assets\images\Fig2.png" alt="Latitude vs. Humidity", title="Latitude vs. Humidity" class="imageNav-photo">
           </a>
                 </div>
       <div class="col-6">
